--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ag-grid-community": "^20.2.0",
+    "ag-grid-react": "^20.2.0",
     "react": "^16.8.6",
+    "react-data-grid": "^6.1.0",
+    "react-data-grid-addons": "^6.1.0",
     "react-dom": "^16.8.6",
+    "react-dom-factories": "^1.0.2",
     "react-scripts": "2.1.8"
   },
   "scripts": {
